--- a/frontend/sportsmatch-app/src/styles/SportEvent.css
+++ b/frontend/sportsmatch-app/src/styles/SportEvent.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@700&display=swap');
 
 * {
   font-family: 'Inter', sans-serif;
@@ -10,7 +11,7 @@ body {
 
 .event .row {
   padding: 0.75em;
-  min-height: 6.625em;
+  height: 6.625em;
 }
 
 .event .col.left {
@@ -26,9 +27,9 @@ body {
   flex-direction: column;
   justify-content: flex-end;
   text-align: right;
-  background:linear-gradient(0deg, rgba(232, 95, 41, 0.25), rgba(232, 95, 41, 0.25)), url('/assets/img-event-card-badminton.png');
+  background:linear-gradient(0deg, rgba(232, 95, 41, 0.25), rgba(232, 95, 41, 0.25)), url(https://images.pexels.com/photos/8007406/pexels-photo-8007406.jpeg);
   background-size: cover;
-  background-position: top;
+  background-position: bottom;
   border-bottom-right-radius: 0.125em;
   border-top-right-radius: 0.125em;
 }
