--- a/frontend/sportsmatch-app/src/styles/SportEvent.css
+++ b/frontend/sportsmatch-app/src/styles/SportEvent.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@700&display=swap');
 
 * {
   font-family: 'Inter', sans-serif;
@@ -10,7 +11,7 @@ body {
 
 .event .row {
   padding: 0.75em;
-  height: 6.625em;
+  min-height: 6.625em;
 }
 
 .event .col.left {
@@ -26,9 +27,9 @@ body {
   flex-direction: column;
   justify-content: flex-end;
   text-align: right;
-  background:linear-gradient(0deg, rgba(232, 95, 41, 0.25), rgba(232, 95, 41, 0.25)), url(https://images.pexels.com/photos/8007406/pexels-photo-8007406.jpeg);
+  background:linear-gradient(0deg, rgba(232, 95, 41, 0.25), rgba(232, 95, 41, 0.25)), url('/assets/img-event-card-badminton.png');
   background-size: cover;
-  background-position: bottom;
+  background-position: top;
   border-bottom-right-radius: 0.125em;
   border-top-right-radius: 0.125em;
 }
@@ -53,19 +54,4 @@ body {
 .event ul li {
   color: #393939;
   font-size: 0.78em;
-}
-
-.host {
-  margin-top: 4em;
-
-}
-
-.host .row {
-  margin: 0.75em 0;
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.05);
-  background:linear-gradient(0deg, rgba(232, 95, 41, 0.25), rgba(232, 95, 41, 0.25)), url(./assets/InProgress.png);
-  background-clip: content-box;
-  background-size: cover;
-  border-radius: 2px;
-  min-height: 395px;
 }
