--- a/frontend/sportsmatch-app/src/styles/SportEvent.css
+++ b/frontend/sportsmatch-app/src/styles/SportEvent.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@700&display=swap');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css');
 
 * {
   font-family: 'Inter', sans-serif;
@@ -11,7 +12,7 @@ body {
 
 .event .row {
   padding: 0.75em;
-  height: 6.625em;
+  min-height: 6.625em;
 }
 
 .event .col.left {
@@ -27,9 +28,9 @@ body {
   flex-direction: column;
   justify-content: flex-end;
   text-align: right;
-  background:linear-gradient(0deg, rgba(232, 95, 41, 0.25), rgba(232, 95, 41, 0.25)), url(https://images.pexels.com/photos/8007406/pexels-photo-8007406.jpeg);
+  background:linear-gradient(0deg, rgba(232, 95, 41, 0.25), rgba(232, 95, 41, 0.25)), url('/assets/img-event-card-badminton.png');
   background-size: cover;
-  background-position: bottom;
+  background-position: top;
   border-bottom-right-radius: 0.125em;
   border-top-right-radius: 0.125em;
 }
@@ -54,42 +55,4 @@ body {
 .event ul li {
   color: #393939;
   font-size: 0.78em;
-}
-
-.host {
-  margin-top: 4em;
-
-}
-
-.host .row {
-  margin: 0.75em 0;
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.05);
-  background:linear-gradient(0deg, rgba(232, 95, 41, 0.25), rgba(232, 95, 41, 0.25)), url(./assets/InProgress.png);
-  background-clip: content-box;
-  background-size: cover;
-  border-radius: 2px;
-  min-height: 395px;
-}
-
-.host .col {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  padding: 0.563em;
-}
-
-.host .col ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  color: #fff;
-}
-
-.host h1 {
- font-family: 'Manrope', sans-serif;
- font-size: 2.5em !important;
- font-weight: 900;
- font-size: 1em;
-
- color: #fff; 
 }
