--- a/frontend/sportsmatch-app/src/styles/SportEvent.css
+++ b/frontend/sportsmatch-app/src/styles/SportEvent.css
@@ -28,7 +28,12 @@ body {
   flex-direction: column;
   justify-content: flex-end;
   text-align: right;
-  background:linear-gradient(0deg, rgba(232, 95, 41, 0.25), rgba(232, 95, 41, 0.25)), url('/assets/img-event-card-badminton.png');
+  background: linear-gradient(
+      0deg,
+      rgba(232, 95, 41, 0.25),
+      rgba(232, 95, 41, 0.25)
+    ),
+    url('/assets/img-event-card-badminton.png');
   background-size: cover;
   background-position: top;
   border-bottom-right-radius: 0.125em;
@@ -43,13 +48,15 @@ body {
   color: #fff;
 }
 
-
-.event ul{
+.event ul {
   list-style: none;
   padding: 0;
   margin: 0;
+}
 
-
+.event svg {
+  color: #393939;
+  margin-right: 0.5em;
 }
 
 .event ul li {
