--- a/frontend/sportsmatch-app/src/styles/LoginComponent.css
+++ b/frontend/sportsmatch-app/src/styles/LoginComponent.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;900&display=swap');
 
 * {
   margin: 0;
@@ -6,8 +6,8 @@
   box-sizing: border-box;
 }
 
-.wrapper {
-  width: 330px;
+.wrapper-login {
+  width: 430px;
   background: #fff;
   border: 2px solid rgba(65, 58, 58, 0.2);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
@@ -17,20 +17,20 @@
   padding: 30px 20px;
 }
 
-.wrapper h1 {
+.wrapper-login h1 {
   color: #e85f29;
   font-size: 36px;
   text-align: center;
 }
 
-.wrapper .input-box {
+.login-input-box {
   position: relative;
   width: 100%;
   height: 40px;
   margin: 30px 0;
 }
 
-.input-box input {
+.login-input-box input {
   width: 100%;
   height: 100%;
   border: 1px solid rgba(65, 58, 58, 0.2);
@@ -39,44 +39,55 @@
   padding: 20px 45px 20px 20px;
 }
 
-.input-box input::placeholder {
+.login-input-box input::placeholder {
   color: #ccc;
+  font-size: 15px;
 }
 
-.input-box input:focus {
+.login-input-box input:focus {
   outline-color: #e85f29;
 }
 
-.input-box .icon {
+.login-input-box .icon {
   position: absolute;
   right: 20px;
   top: 50%;
   transform: translateY(-50%);
   font-size: 16px;
+  color: #a1a0a0;
 }
 
-.wrapper .remember-forgot {
+.login-remember-forgot {
   display: flex;
   justify-content: space-between;
   font-size: 14px;
   margin: -15px 0 15px;
 }
 
-.remember-forgot label input {
-  accent-color: #ccc;
+.login-remember-forgot input {
+  position: relative;
+  top: 4px;
+  width: 20px;
+  height: 20px;
+}
+
+.login-remember-forgot label input {
+  accent-color: #e85f29;
   margin-right: 4px;
 }
 
-.remember-forgot a {
+.login-remember-forgot a {
+  position: relative;
+  top: 4px;
   color: #ccc;
   text-decoration: none;
 }
 
-.remember-forgot a:hover {
+.login-remember-forgot a:hover {
   text-decoration: underline;
 }
 
-.wrapper button {
+.wrapper-login button {
   width: 100%;
   height: 45px;
   background: #e85f29;
@@ -87,26 +98,26 @@
   cursor: pointer;
   font-size: 16px;
   color: #fff;
-  font-weight: 700;
+  font-weight: 600;
 }
 
-.wrapper button:hover {
+.wrapper-login button:hover {
   transform: scale(1.05);
 }
 
-.wrapper .register-link {
+.login-register-link {
   font-size: 14px;
   text-align: center;
   margin: 20px 0 15px;
 }
 
-.register-link p a {
+.login-register-link  p a {
   color: #ccc;
   text-decoration: none;
-  font-weight: 600;
+  font-weight: 500;
 }
 
-.register-link p a:hover {
+.login-register-link p a:hover {
   text-decoration: underline;
 }
 
