--- a/frontend/sportsmatch-app/src/styles/EventHistoryItem.css
+++ b/frontend/sportsmatch-app/src/styles/EventHistoryItem.css
@@ -30,7 +30,7 @@
 .user-side {
     grid-column: 1;
     display: grid;
-    grid-template-columns: 5fr 1fr;
+    grid-template-columns: 3fr 1fr 1fr;
     padding: 9px;
     text-align: center;
     grid-template-rows: 2fr 1fr;
@@ -39,7 +39,7 @@
 .opponent-side {
     grid-column: 3;
     display: grid;
-    grid-template-columns: 1fr 5fr;
+    grid-template-columns: 1fr 1fr 3fr;
     padding: 9px;
     text-align: center;
     grid-template-rows: 2fr 1fr;
