--- a/frontend/sportsmatch-app/src/styles/Sport.css
+++ b/frontend/sportsmatch-app/src/styles/Sport.css
@@ -1,5 +1,5 @@
 .checkbox {    
-    appearance: none;       
+  appearance: none;       
 }
 
 .checkbox-wrapper{
@@ -25,15 +25,30 @@ color: #FFFFFF;
 }
 
 .input-search {    
-    border: 1px solid rgba(65, 58, 58, 0.2);
-    border-radius: 40px;
-    font-size: 1.5em;
-    padding: 0.25em 0.5em 0.25em 20px;
-  }
   
-
+  border: 1px solid rgba(65, 58, 58, 0.2);
+  border-radius: 40px;
+  font-size: 1.5em;
+  padding: 0.25em 0.5em 0.25em 2.5em;
+}
+  
 .search-icon {
-    color: #4a494f;
-    height: 100%; 
-    font-size: 1.5em;
-  }
+  position: relative;
+  left: 2em;
+  color: #4a494f;
+  height: 100%; 
+  font-size: 1.5em;
+}
+
+button {
+  width: 100%;
+  height: 45px;
+  background: #e85f29;
+  border: none;
+  outline: none;
+  border-radius: 40px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  font-size: 1.5em;
+  color: #fff;  
+}
