--- a/frontend/sportsmatch-app/src/styles/Sport.css
+++ b/frontend/sportsmatch-app/src/styles/Sport.css
@@ -4,14 +4,16 @@
 
 .allsports-page {
   margin-top: 64px;
+  position: relative;
+
 }
 
 .checkbox-wrapper{
   font-size: 1.5rem;
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.05);
   border-radius: 2px; 
   margin: 0.5rem 0;
-  padding: 0.25rem 0.25;
+  padding: 0.25rem 0;
 }
 
 
@@ -46,8 +48,8 @@ color: #FFFFFF;
 }
 
 button {
-  width: 100%;
-  height: 2rem;
+  width: 85%;
+  height: 1.5rem;
   background: #e85f29;
   border: none;
   outline: none;
@@ -55,10 +57,7 @@ button {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   cursor: pointer;
   font-size: 0.6rem;  
-  color: #fff;  
-}
-
-.button-wrapper{  
-  margin: 0.5rem 0;
-  padding: 0.25rem 0.25;
+  color: #fff;
+  position: absolute;
+  bottom: 1rem;
 }
