--- a/frontend/sportsmatch-app/src/styles/MainPage.css
+++ b/frontend/sportsmatch-app/src/styles/MainPage.css
@@ -1,9 +1,3 @@
-/* General Styles */
-
-
-/* Form Styles */
-
-
 .mainPage-form {
   display: flex;
 }
@@ -53,8 +47,8 @@
 }
 
 .mainPage-p {
-  margin-top: 2vh;
   margin-left: 8vw;
+  margin-top: 4vh;
 }
 
 /* Nearby Events Container Styles */
@@ -73,8 +67,6 @@
 
 /* Media Queries */
 @media (max-width: 768px) {
-  
-
   .nearby-events-container {
     position: absolute;
     display: flex;
@@ -108,5 +100,9 @@
   .mainPage-sports-container {
     width: 90%;
     justify-content: space-around;
+  }
+
+  .mainPage-p {
+    margin-top: 14vh;
   }
 }
