--- a/frontend/sportsmatch-app/src/styles/Navbar.css
+++ b/frontend/sportsmatch-app/src/styles/Navbar.css
@@ -5,8 +5,9 @@
 }
 
 nav{
+  position: absolute;
+  top: 0;
   width: 100%;
   height: 60px;
-  background: rgba(255, 255, 255, 0.5);;
-  border-radius: 10px;
+  background: rgba(255, 255, 255, 0.5);
 }
