--- a/frontend/sportsmatch-app/src/styles/SportsBtn.css
+++ b/frontend/sportsmatch-app/src/styles/SportsBtn.css
@@ -41,3 +41,10 @@
   .sportBtn-p {
     margin-left: 8vw;
   }
+
+  @media (max-width: 400px) {
+    .wrapper {
+      position: relative;
+      top: 12vh;
+    }
+  }
