--- a/frontend/sportsmatch-app/src/styles/Sport.css
+++ b/frontend/sportsmatch-app/src/styles/Sport.css
@@ -5,7 +5,7 @@
 }
 
 .checkbox {
-    appearance: none;
+    appearance: none;    
 }
 
 .checkbox-wrapper .row {
@@ -15,6 +15,7 @@
     background-size: cover;
     border-radius: var(--sm-border-radius);
     min-height: 48px;
+    font-weight: 900;
 }
 
 .checkbox-wrapper .col {
@@ -27,12 +28,12 @@
 
 .selected {
     color: var(--sm-orange);
-    background: linear-gradient(0deg, rgba(249, 248, 245, 0.05), rgba(249, 248, 245, 0.05));
-
+    background: linear-gradient(0deg, rgba(249, 248, 245, 0.6), rgba(249, 248, 245, 0.6));   
 }
 
 .unselected {
     color: var(--sm-white);
+    background: linear-gradient(0deg, var(--sm-orange-overlay),var(--sm-orange-overlay));
 }
 
 .input-search {
@@ -60,17 +61,13 @@
 
 button {
     width: 100%;
-    height: 1.5rem;
+    height: 2rem;
     background: var(--sm-orange);
     border: none;
     outline: none;
     border-radius: 40px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     cursor: pointer;
-    font-size: 0.6rem;
+    font-size: 1rem;
     color: var(--sm-white);
-}
-
-.checkbox-wrapper label {
-    width: 13em;
 }
