--- a/frontend/sportsmatch-app/src/App.css
+++ b/frontend/sportsmatch-app/src/App.css
@@ -24,23 +24,14 @@
   --sm-text-size: 1em;
 }
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Inter', sans-serif;
-}
-
 svg {
   color: var(--sm-white);
 }
 
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  background: var(--sm-primary-bg);
-  background-size: cover;
-  background-position: center;
+body, html, #root {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Inter', sans-serif;
 }
