--- a/frontend/sportsmatch-app/src/styles/SignupComponent.css
+++ b/frontend/sportsmatch-app/src/styles/SignupComponent.css
@@ -85,11 +85,12 @@
   text-decoration: underline;
 }
 
-body {
+.signup-container {
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  min-height: 100%;
   background: #e9e6e6;
   background-size: cover;
   background-position: center;
