--- a/frontend/sportsmatch-app/src/styles/Sport.css
+++ b/frontend/sportsmatch-app/src/styles/Sport.css
@@ -1,8 +1,3 @@
-.sports-page-wrapper {
-    position: absolute;
-    left:0;
-    top: 1em;
-}
 
 .checkbox {
     appearance: none;    
@@ -41,16 +36,16 @@
     width: 100%;
     border: 1px solid rgba(65, 58, 58, 0.2);
     border-radius: 40px;
-    font-size: 0.5rem;
-    padding: 0.5rem 0.5rem 0.5rem 1.75rem;
+    font-size: 1rem;
+    padding: 0.5rem 0.5rem 0.5rem 2.5rem;
 }
 
 .search-icon {
-    position: relative;
-    top: 1.6rem;
-    left: 0.75rem;
+    position: absolute;
+    top: .5rem;
+    left: 1.5rem;
     color: #4a494f;
-    font-size: 0.75rem;
+    font-size: 1.5rem;
 }
 
 .submit-button {
