--- a/frontend/sportsmatch-app/src/styles/Navbar.css
+++ b/frontend/sportsmatch-app/src/styles/Navbar.css
@@ -8,5 +8,5 @@ nav{
   width: 100%;
   height: 60px;
   background: rgba(255, 255, 255, 0.5);;
-  border-radius: 10px;
+  border-radius:0 0 10px  10px ;
 }
