--- a/frontend/sportsmatch-app/src/App.css
+++ b/frontend/sportsmatch-app/src/App.css
@@ -5,13 +5,13 @@
   --sm-primary-font: 'Inter', sans-serif;
   --sm-secondary-font: 'Manrope', sans-serif;
 
-  --sm-primary-bg: #f9f8f5;
+  --sm-primary-bg: #e0e0e0;
   --sm-orange: #e85f29;
   --sm-dark: #4a494f;
   --sm-white: #ffffff;
   --sm-txt-dark: #393939;
   --sm-secondary-orange: #fc4c02;
-  --sm-orange-overlay: rgba(232, 95, 41, 0.25);
+  --sm-orange-overlay: rgba(183, 85, 45, 0.37);
 
   --sm-border-shadow: 0px 0px 5px rgba(0, 0, 0, 0.05);
   --sm-border-radius: 2px;
@@ -34,6 +34,7 @@ body, html, #root {
   padding: 0;
   box-sizing: border-box;
   font-family: 'Inter', sans-serif;
+  background-color: var(--sm-primary-bg);
 }
 
 .centered-container {
@@ -42,7 +43,6 @@ body, html, #root {
   justify-content: center;
   align-items: center;
   min-height: 100%;
-  background: #e9e6e6;
   background-size: cover;
   background-position: center;
 }
