--- a/frontend/sportsmatch-app/src/styles/Navbar.css
+++ b/frontend/sportsmatch-app/src/styles/Navbar.css
@@ -1,6 +1,6 @@
 .logo-png{
   width: 110px;
-  margin-left: 17px;
+  margin-left: 10px;
   margin-top: 16px;
 }
 
@@ -9,4 +9,31 @@ nav{
   height: 60px;
   background: rgba(255, 255, 255, 0.5);;
   border-radius:0 0 10px  10px ;
+}
+
+.user-image{
+  width: 40px;
+  height: 40px;
+  margin-top: 10px;  
+}
+
+.dropdown-toggle::after{
+  display: none;
+}
+
+.dropdown-menu.show{
+  background-color: var(--sm-primary-bg);
+  font-family: var(--sm-primary-font);
+  font-size: var(--sm-h3-size);
+}
+
+.dropdown-item{
+  color: var(--sm-dark);
+}
+
+#collapsible-nav-dropdown{  
+  width: 40px;
+  height: 40px;
+  margin: 0;  
+  padding: 0;
 }
