--- a/frontend/sportsmatch-app/src/styles/NewUserComponent.css
+++ b/frontend/sportsmatch-app/src/styles/NewUserComponent.css
@@ -126,13 +126,14 @@
 
 .sports-button {
   display: inline-block;
-  padding: 10px;
+  width: 100%;
+  padding: 0.625em;
   border: none;
-  background-color: #2c2b2b;
+  background-color: var(--sm-dark);
   color: #ffffff;
-  border-radius: 30px;
+  border-radius: 1.875em;
   cursor: pointer;
-  margin: 3px;
+  margin: 0.313em;
 }
 
 .sports-checkbox:checked + .sports-button {
@@ -140,7 +141,19 @@
   color: #fff;
 }
 
-#more-sports-button {
+.more-sports-button {
+  display: inline-block;
+  width: 100%;
+  padding: 0.625em;
+  border: none;
+  background-color: var(--sm-dark);
+  color: #ffffff;
+  border-radius: 30px;
+  cursor: pointer;
+  margin: 5px;
+}
+
+/* #more-sports-button {
   width: 80px;
   display: inline-block;
   padding: 10px;
@@ -151,7 +164,7 @@
   cursor: pointer;
   margin: 3px;
   transform: scale(1.05);
-}
+} */
 
 .wrapper .parent-male:hover {
   transform: scale(1.05);
