--- a/frontend/sportsmatch-app/src/styles/RateGameComponent.css
+++ b/frontend/sportsmatch-app/src/styles/RateGameComponent.css
@@ -78,3 +78,17 @@
 .form-control::placeholder {
     color: var(--sm-orange);
 }
+
+
+button {
+    width: 100%;
+    height: 2rem;
+    background: var(--sm-orange);
+    border: none;
+    outline: none;
+    border-radius: 40px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    font-size: 1rem;
+    color: var(--sm-white);    
+}
