--- a/frontend/sportsmatch-app/src/styles/RateGameComponent.css
+++ b/frontend/sportsmatch-app/src/styles/RateGameComponent.css
@@ -1,8 +1,34 @@
 .rate-game-window-wrapper {
-    height: 75%;
-    width: 92%;
-    background-color: var(--sm-primary-bg);
+    height: 100%;
+    width: 90%;    
+    background-color: var(--sm-white);
     color: var(--sm-orange);    
+}
+
+.rate-game-label {
+    font-size: 1.5rem;
+    font-weight: 500;
+    text-align: center;
+    margin-top: 3rem;
+    margin-bottom: 1.5rem;
+}    
+
+.textarea-label, .event-details, .score-input-label, .star-rating-label {
+    font-size: 0.75rem;
+}
+
+.event-details, .score-input-label {    
+    text-align: center;
+}
+
+.event-details {
+    margin: 0;
+}
+
+.score-input-label {    
+    margin-top: 0.75rem;
+    margin-bottom: 0.2rem;
+    margin-right: 0;    
 }
 
 .score-input-panel {
@@ -10,11 +36,12 @@
     grid-template-columns: 2rem 4.375rem 1fr 0.688rem auto 0.688rem 0.25fr 0.5rem 0.25fr 
     0.688rem auto 0.688rem 1fr 4.375rem 2rem;
     grid-template-rows: 0.625rem 3.125rem 0.625rem 1.563rem;
-    justify-content: center;}
+    justify-content: center;
+    margin-bottom: 1.5rem;
+}
 
 .star-rating-label {
-    margin: 0;
-    font-size: 0.75rem;    
+    margin: 0;       
 }
 
 .user-picture {
@@ -35,8 +62,14 @@
 .score-input-user {
     display: grid;
     grid-column: 2 / 3;
-    grid-row: 1 / 2;  
-    
+    grid-row: 1 / 2;    
+}
+
+.user-name {
+    display: grid;
+    grid-column: 2 / 3;
+    grid-row: 4 / 5;
+    text-align: center;
 }
 
 .divider {
@@ -60,6 +93,13 @@
     display: grid;
     grid-column: 14 / 15;    
     grid-row: 1 / 4;   
+}
+
+.opponent-name {
+    display: grid;
+    grid-column: 14 / 15;
+    grid-row: 4 / 5;
+    text-align: center;
 }
 .star-rating {     
     align-items: center;
@@ -91,4 +131,15 @@ button {
     cursor: pointer;
     font-size: 1rem;
     color: var(--sm-white);    
+}
+
+#text-user-rating {
+    border: none;
+    background-color: var(--sm-primary-bg);
+    width: 100%;    
+}
+
+.textarea-label {  
+    margin-top: 1.5rem; 
+    margin-bottom: 0.25rem;
 }
