--- a/frontend/sportsmatch-app/src/styles/RateGameComponent.css
+++ b/frontend/sportsmatch-app/src/styles/RateGameComponent.css
@@ -1,8 +1,11 @@
 .rate-game-window-wrapper {
     height: 100%;
     width: 90%;    
-    background-color: var(--sm-white);
-    color: var(--sm-orange);    
+    background-color: var(--sm-white);      
+}
+
+.form-control::placeholder, textarea, .rate-game-window-wrapper {
+    color: var(--sm-orange);
 }
 
 .rate-game-label {
@@ -33,8 +36,8 @@
 
 .score-input-panel {
     display: grid;
-    grid-template-columns: 2rem 4.375rem 1fr 0.688rem auto 0.688rem 0.25fr 0.5rem 0.25fr 
-    0.688rem auto 0.688rem 1fr 4.375rem 2rem;
+    grid-template-columns: 0.25fr 4.375rem 1fr 0.688rem auto 0.688rem 0.25fr 0.5rem 0.25fr 
+    0.688rem auto 0.688rem 1fr 4.375rem 0.25fr;
     grid-template-rows: 0.625rem 3.125rem 0.625rem 1.563rem;
     justify-content: center;
     margin-bottom: 1.5rem;
@@ -112,13 +115,10 @@
     background-color: transparent;
     color: var(--sm-orange);
     font-size: 2rem;
-    font-weight: 900;
-    width: 1ch;    
+    font-weight: 700;
+    width: 2ch; 
+    text-align: center; 
 }
-.form-control::placeholder {
-    color: var(--sm-orange);
-}
-
 
 button {
     width: 100%;
@@ -142,4 +142,8 @@ button {
 .textarea-label {  
     margin-top: 1.5rem; 
     margin-bottom: 0.25rem;
+}
+
+textarea {
+    padding: 0.25rem 0.5rem;    
 }
