SMA-64: implement filter button, allsports button and add loadingSpinner when data is empty

--- a/frontend/sportsmatch-app/src/styles/Index.css
+++ b/frontend/sportsmatch-app/src/styles/Index.css
@@ -10,6 +10,16 @@
   margin-top: 0.938em;
 }
 
+.row.load-anim {
+  min-height: 15.625em;
+  justify-content: center;
+  align-content: center;
+}
+
+.load-msg {
+  margin: 0.625em;
+}
+
 .slide {
   color: white;
   background-size: cover;
