--- a/frontend/sportsmatch-app/src/styles/Modal.css
+++ b/frontend/sportsmatch-app/src/styles/Modal.css
@@ -1,10 +1,10 @@
 .modal-overlay {
     z-index: 9999;
-    width: 100vw;
-    height: 100vh;
     position: absolute;
-    top: 0;
-    background: rgba(76, 72, 72, 0.7);
+    left: 0;
+    width: 100vw;
+    height: 100vh;    
+    background: linear-gradient(0deg, rgba(76, 72, 72, 0.7), rgba(76, 72, 72, 0.7));
     display: flex;
     justify-content: center;
     align-items: center;
@@ -13,7 +13,7 @@
   .modal-box {
     display: block;
     background: transparent;
-    width: 100%;
+    width: 90%;
     height: 75%;    
     border-radius: 1rem;
   }
