--- a/frontend/sportsmatch-app/src/styles/RatingCard.css
+++ b/frontend/sportsmatch-app/src/styles/RatingCard.css
@@ -2,6 +2,7 @@
     width: 50px;
     height: 50px;
     border-radius: 100%;
+    object-fit: cover;
 }
 
 .rated-wrapper {
@@ -12,5 +13,14 @@
 }
 
 .rated-wrapper p {
+    margin: 0;
+}
+
+.row.rated-star svg {
+    color: var(--sm-orange);
+}
+
+.col.rated-name h5 {
+    color: var(--sm-orange);
     margin: 0;
 }
