--- a/frontend/sportsmatch-app/src/styles/HostEventComponent.css
+++ b/frontend/sportsmatch-app/src/styles/HostEventComponent.css
@@ -24,19 +24,13 @@
   margin: 5px 0;
 }
 
-.host-event-input-box input {
-  width: 100%;
-  height: 100%;
-  border-radius: 40px;
-  font-size: 13px;
-  padding: 20px 45px 20px 20px;
-}
+.host-event-input-box input,
 .host-event-input-box select {
   width: 100%;
   height: 100%;
   border-radius: 40px;
   font-size: 13px;
-  padding: 20px 45px 20px 20px;
+  padding: 10px 20px;
 }
 
 .wrapper-host-event button {
