SMA-73: added no rating text

--- a/frontend/sportsmatch-app/src/styles/UserRating.css
+++ b/frontend/sportsmatch-app/src/styles/UserRating.css
@@ -1,3 +1,11 @@
 .row.load-btn button {
-    margin: 5px 0 5px 0;
-    }
+  margin: 5px 0 5px 0;
+}
+
+.col.no-ratings-msg {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 300px;
+    color: var(--sm-txt-dark);
+}
