all data for EventDTO working

--- a/frontend/sportsmatch-app/src/styles/HostEventComponent.css
+++ b/frontend/sportsmatch-app/src/styles/HostEventComponent.css
@@ -50,3 +50,9 @@
 .wrapper-host-event button:hover {
   transform: scale(1.05);
 }
+
+.date-picker button {
+  background: none;
+  height: 32px;
+  width: 32px;
+}
