--- a/frontend/sportsmatch-app/src/styles/Match.css
+++ b/frontend/sportsmatch-app/src/styles/Match.css
@@ -12,13 +12,17 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 0.563em;
+  padding: 0.563em;  
 }
 
 .match .col ul {
   list-style: none;
   padding: 0;
   margin: 0;
+  color: #fff;
+}
+
+.match li{
   color: #fff;
 }
 
