--- a/frontend/sportsmatch-app/src/styles/JoinEvent.css
+++ b/frontend/sportsmatch-app/src/styles/JoinEvent.css
@@ -9,7 +9,10 @@
 }
 
 
-.join-event-wrapper {    
+.join-event-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;    
     padding-left: 5%;
     padding-right: 5%;
     color: var(--sm-orange);
