WIP: SMA-84: update modal position to fixed (#68)
Co-authored-by: MatejFrnka <mat.frnka@gmail.com>
Co-authored-by: Ivana Machacikova <131284389+ivamach@users.noreply.github.com>
Co-authored-by: Kollonay Zoltán <116440323+kz44@users.noreply.github.com>

--- a/frontend/sportsmatch-app/src/styles/Modal.css
+++ b/frontend/sportsmatch-app/src/styles/Modal.css
@@ -1,6 +1,6 @@
 .modal-overlay {
     z-index: 9999;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100vw;
@@ -12,7 +12,9 @@
   }
 
   .modal-box {
-    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background: transparent;
     width: 90%;
     height: 75%;    
