--- a/frontend/sportsmatch-app/src/styles/SignupComponent.css
+++ b/frontend/sportsmatch-app/src/styles/SignupComponent.css
@@ -13,7 +13,7 @@
 
 .signup-wrapper h1 {
   color: #e85f29;
-  font-size: 36px;
+  font-size: var(--sm-h1-heading);
   text-align: center;
 }
 
@@ -29,13 +29,13 @@
   height: 100%;
   border: 1px solid rgba(65, 58, 58, 0.2);
   border-radius: 40px;
-  font-size: 13px;
+  font-size: var(--sm-text-content);
   padding: 20px 45px 20px 20px;
 }
 
 .signup-input-box input::placeholder {
   color: #ccc;
-  font-size: 15px;
+  font-size: var(--sm-text-content);
 }
 
 .signup-input-box input:focus {
@@ -47,7 +47,7 @@
   right: 20px;
   top: 50%;
   transform: translateY(-50%);
-  font-size: 16px;
+  font-size: var(--sm-text-content);
   color: #a1a0a0;
 }
 
@@ -60,7 +60,8 @@
   border-radius: 40px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   cursor: pointer;
-  font-size: 16px;
+  font-family: var(--sm-primary-font);
+  font-size: var(--sm-text-content);
   color: #fff;
   font-weight: 600;
 }
@@ -70,7 +71,7 @@
 }
 
 .signup-remember-forgot {
-  font-size: 14px;
+  font-size: var(--sm-text-content);
   text-align: center;
   margin: 20px 0 15px;
 }
