--- a/frontend/sportsmatch-app/src/styles/UserPage.css
+++ b/frontend/sportsmatch-app/src/styles/UserPage.css
@@ -33,3 +33,11 @@
 .user-page .nearby-wrapper p {
   color: var(--sm-orange);
 }
+
+.view-wrapper {
+  margin: 0.625em 0 0.625em 0;
+}
+
+.nearby-wrapper {
+  margin: 0.625em 0 0.625em 0;
+}
