--- a/frontend/sportsmatch-app/src/App.css
+++ b/frontend/sportsmatch-app/src/App.css
@@ -5,7 +5,7 @@
   --sm-primary-font: 'Inter', sans-serif;
   --sm-secondary-font: 'Manrope', sans-serif;
 
-  --sm-primary-bg: #e0e0e0;
+  --sm-primary-bg: #F9F8F5;
   --sm-orange: #e85f29;
   --sm-dark: #4a494f;
   --sm-white: #ffffff;
