--- a/frontend/sportsmatch-app/src/styles/Navbar.css
+++ b/frontend/sportsmatch-app/src/styles/Navbar.css
@@ -7,8 +7,7 @@
 nav{
   width: 100%;
   height: 60px;
-  background: rgba(255, 255, 255, 0.5);;
-  border-radius:0 0 10px  10px ;
+  background: rgba(255, 255, 255, 0.5);
 }
 
 .user-image{
@@ -36,4 +35,10 @@ nav{
   height: 40px;
   margin: 0;  
   padding: 0;
+}
+
+.avatar-icon {
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
 }
